#pragma once

#include "UIScreen.h"

class ResultScreen : public UIScreen
{
public:
	ResultScreen(class Game* game, uint64_t time);
};