#pragma once

#include "UIScreen.h"

class TitleScreen : public UIScreen
{
public:
	TitleScreen(class Game* game);
};